--- a/login.html
+++ b/login.html
@@ -3,27 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width" />
   <link rel="stylesheet" href="./css/login.css">
   <title>Document</title>
 </head>
 <body>
   <div class="login_wrap">
+    <video autoplay loop muted>
+      <source src="./imgs/4K_100.mp4">
+    </video>
+    <figure><img src="./imgs/bg.png" alt=""></figure>
     <div class="login_con1_wrap">
       <div class="con1">
         <figure><img src="./imgs/agumon.png" alt=""></figure>
       </div>
       <div class="con1_txt">
         <figure><img src="./imgs/con1_txt_box.png" alt=""></figure>
-        <p>안녕 블라블라~~</p>
+        <figure><img src="./imgs/arrow.png" alt=""></figure>
+        <p>안녕? 디지털 월드에 온걸 환영해!<br>
+          너에 대해서 알려줄래?
+        </p>
       </div>
     </div>
-
     <div class="login_con2_wrap">
       블리블리발랄라ㅏㄹ아아
     </div>
   </div>
 
-  <script>
+
+
+
+
+
+  
+  <!-- <script>
     const con1Txt = document.querySelector('.con1_txt'),
             con1Wrap = document.querySelector('.login_con1_wrap'),
             con2Wrap = document.querySelector('.login_con2_wrap')
@@ -32,6 +45,6 @@
       con1Wrap.style = `display:none`
       con2Wrap.style = `display:block`
     }
-  </script>
+  </script> -->
 </body>
 </html>
