--- a/login.html
+++ b/login.html
@@ -10,12 +10,14 @@
 <body>
   <div class="login_wrap">
     <video autoplay loop muted>
-      <source src="./imgs/4K_100.mp4">
+      <source src="./imgs/bg.mp4">
     </video>
     <figure><img src="./imgs/bg.png" alt=""></figure>
     <div class="login_con1_wrap">
       <div class="con1">
-        <figure><img src="./imgs/agumon.png" alt=""></figure>
+        <figure class="dot"><img src="./imgs/dotdotdot.png" alt=""></figure>
+        <figure class="agumon"><img src="./imgs/agumon.png" alt=""></figure>
+        <figure class="tornado"><img src="./imgs/tornado.png" alt=""></figure>
       </div>
       <div class="con1_txt">
         <figure><img src="./imgs/con1_txt_box.png" alt=""></figure>
