--- a/login.html
+++ b/login.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width" />
   <link rel="stylesheet" href="./css/login.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script defer src="./js/login.js"></script>
   <title>Document</title>
 </head>
 <body>
@@ -22,13 +24,64 @@
       <div class="con1_txt">
         <figure><img src="./imgs/con1_txt_box.png" alt=""></figure>
         <figure><img src="./imgs/arrow.png" alt=""></figure>
-        <p>안녕? 디지털 월드에 온걸 환영해!<br>
-          너에 대해서 알려줄래?
-        </p>
+        <p class="typing_txt">안녕? 디지털 월드에 온걸 환영해!</p>
+        <p class="typing"></p>
+        <p class="typing_txt">너에 대해서 알려줄래?</p>
+        <p class="typing"></p>
       </div>
     </div>
+    <script>
+      var typingBool = false; 
+      var typingIdx=0; 
+
+
+      $(".typing_txt").each((k,v)=>{
+        const typingTxt= $(v).text().split("");
+        switch(k){
+          case 0 : 
+              if(typingBool==false){ 
+                // 타이핑이 진행되지 않았다면 
+                typingBool=true;     
+                var tyInt = setInterval(typing,100); // 반복동작 
+              }  
+          break;
+          case 1 :
+              setTimeout(()=>{
+                typingBool = false; typingIdx=0;
+              if(typingBool==false){ 
+                // 타이핑이 진행되지 않았다면 
+                typingBool=true;     
+                var tyInt = setInterval(typing,100); // 반복동작 
+              } 
+              },2300)
+          break;
+        }
+        function typing(){ 
+        if(typingIdx<typingTxt.length){ 
+          // 타이핑될 텍스트 길이만큼 반복 
+          $(".typing").eq(k).append(typingTxt[typingIdx]);
+          // 한글자씩 이어준다. 
+          typingIdx++; 
+        } else{ 
+          //끝나면 반복종료 
+          clearInterval(tyInt); 
+        } 
+      }
+
+
+      })
+
+      
+    </script>
+
     <div class="login_con2_wrap">
-      블리블리발랄라ㅏㄹ아아
+      <div class="con2_txt">
+        <figure><img src="./imgs/small_agumon.png" alt=""></figure>
+        <figure>
+          <img src="./imgs/con2_txt_box.png" alt="">
+          <p>캐릭터를 고르고 닉네임을 지어줘!</p>
+        </figure>
+      </div>
     </div>
   </div>
 
