--- a/login.html
+++ b/login.html
@@ -76,11 +76,19 @@
 
     <div class="login_con2_wrap">
       <div class="con2_txt">
-        <figure><img src="./imgs/small_agumon.png" alt=""></figure>
+        <div class="combine">
+          <figure><img src="./imgs/agumon.png" alt=""></figure>
+          <figure><img src="./imgs/tornado.png" alt=""></figure>
+        </div>
         <figure>
           <img src="./imgs/con2_txt_box.png" alt="">
           <p>캐릭터를 고르고 닉네임을 지어줘!</p>
         </figure>
+      </div>
+      <div class="character"></div>
+      <div class="user_name">
+        <figure><img src="./imgs/user_name.png" alt=""></figure>
+        <p>닉네임을 입력해주세요.</p>
       </div>
     </div>
   </div>
