--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="login_wrap">
-    <video autoplay loop muted>
+    <video autoplay loop muted controls>
       <source src="./imgs/bg.mp4">
     </video>
     <figure><img src="./imgs/bg.png" alt=""></figure>
